src/styles/palette.scss
// (c)olor
$black: #05091e;
$dark-gray: #0d0e0f;
$blue: #46b4ff;
$gray: #90aab7;
$green: #9ef2cb;
$pink: #ffb8d9;
$orange: #ffb7a3;
$yellow: #ffdace;
$white: #fff;

// (f)ont
$f-u18: 11.390625em;
$f-u17: 9.950627481136905em;
$f-u16: 8.692673779389363em;
$f-u15: 7.59375em;
$f-u14: 6.63375165409127em;
$f-u13: 5.795115852926242em;
$f-u12: 5.0625em;
$f-u11: 4.422501102727513em;
$f-u10: 3.8634105686174953em;
$f-u9: 3.375em;
$f-u8: 2.9483340684850083em;
$f-u7: 2.575607045744997em;
$f-u6: 2.25em;
$f-u5: 1.9655560456566725em;
$f-u4: 1.7170713638299977em;
$f-u3: 1.5em;
$f-u2: 1.3103706971044482em;
$f-u1: 1.1447142425533319em;
$f-d1: 0.8735804647362989em;
$f-d2: 0.7631428283688879em;
$f-d3: 0.6666666666666666em;
$f-d4: 0.5823869764908659em;
$f-d5: 0.5087618855792586em;
$f-d6: 0.4444444444444444em;
$f-d7: 0.3882579843272439em;
$f-d8: 0.3391745903861724em;
$f-d9: 0.2962962962962963em;
$f-d10: 0.2588386562181626em;
$f-d11: 0.22611639359078162em;
$f-d12: 0.19753086419753085em;
$f-d13: 0.17255910414544176em;
$f-d14: 0.15074426239385438em;
$f-d15: 0.13168724279835392em;
$f-d16: 0.11503940276362785em;
$f-d17: 0.10049617492923625em;
$f-d18: 0.0877914951989026em;

// (t)heme
$t-fg: $black;
$t-bg: $white;
$t-subdue: $gray;
$t-active: $blue;

/* Coolors Exported Palette - https://coolors.co/dad6d6-92bfb1-f4ac45-694a38-a61c3c */

$light-gray: #dad6d6ff;
$cambridge-blue: #92bfb1ff;
$yellow-orange: #f4ac45ff;
$coffee: #694a38ff;
$vivid-burgundy: #a61c3cff;

$light-gray: hsla(0, 5%, 85%, 1);
$cambridge-blue: hsla(161, 26%, 66%, 1);
$yellow-orange: hsla(35, 89%, 61%, 1);
$coffee: hsla(22, 30%, 32%, 1);
$vivid-burgundy: hsla(346, 71%, 38%, 1);

$light-gray: rgba(218, 214, 214, 1);
$cambridge-blue: rgba(146, 191, 177, 1);
$yellow-orange: rgba(244, 172, 69, 1);
$coffee: rgba(105, 74, 56, 1);
$vivid-burgundy: rgba(166, 28, 60, 1);

$gradient-top: linear-gradient(
  0deg,
  #dad6d6ff,
  #92bfb1ff,
  #f4ac45ff,
  #694a38ff,
  #a61c3cff
);
$gradient-right: linear-gradient(
  90deg,
  #dad6d6ff,
  #92bfb1ff,
  #f4ac45ff,
  #694a38ff,
  #a61c3cff
);
$gradient-bottom: linear-gradient(
  180deg,
  #dad6d6ff,
  #92bfb1ff,
  #f4ac45ff,
  #694a38ff,
  #a61c3cff
);
$gradient-left: linear-gradient(
  270deg,
  #dad6d6ff,
  #92bfb1ff,
  #f4ac45ff,
  #694a38ff,
  #a61c3cff
);
$gradient-top-right: linear-gradient(
  45deg,
  #dad6d6ff,
  #92bfb1ff,
  #f4ac45ff,
  #694a38ff,
  #a61c3cff
);
$gradient-bottom-right: linear-gradient(
  135deg,
  #dad6d6ff,
  #92bfb1ff,
  #f4ac45ff,
  #694a38ff,
  #a61c3cff
);
$gradient-top-left: linear-gradient(
  225deg,
  #dad6d6ff,
  #92bfb1ff,
  #f4ac45ff,
  #694a38ff,
  #a61c3cff
);
$gradient-bottom-left: linear-gradient(
  315deg,
  #dad6d6ff,
  #92bfb1ff,
  #f4ac45ff,
  #694a38ff,
  #a61c3cff
);
$gradient-radial: radial-gradient(
  #dad6d6ff,
  #92bfb1ff,
  #f4ac45ff,
  #694a38ff,
  #a61c3cff
);

